[package]
name = "write_together"
version = "0.1.0"
authors = ["olivermd <odownard.trade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
futures = "0.3.14"
itertools = "0.10.0"
clap = "3.0.0-beta.2"
crossterm = { version = "0.18", features = ['event-stream'] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }